move fn utils used only by 1 mapper